
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CPUINFO_SMAP ;
 int EXIT_FAILURE ;
 int cpuinfo_scan () ;
 int exit (int ) ;
 int info (char*) ;

__attribute__((used)) static void cpuinfo_check() {
 int rv = cpuinfo_scan();
 if (rv & CPUINFO_SMAP) {
  info("[-] SMAP detected, no bypass available, aborting\n");
  exit(EXIT_FAILURE);
 }
}
